openshift-deployment/20251217_route-consul-api-gw_with-tls/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: mesh-db-tproxy
  labels:
    app: demo-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: demo-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
  namespace: mesh-db-tproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: demo-db
      app: demo-db
  template:
    metadata:
      labels:
        service: demo-db
        app: demo-db
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy: "true"
        k8s.v1.cni.cncf.io/networks: '[{"name":"consul-cni"}]'
    spec:
      serviceAccountName: demo-db
      containers:
        - name: demo-db
          image: muarwi/demo-microservice-db:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: "pgdata"
      volumes:
        - name: pgdata
          emptyDir: {}
