openshift-deployment/20251217_route-consul-api-gw_with-tls/gateway-demo-app.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gw-demo-app
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTPS
    port: 8080
    name: https
    allowedRoutes:
      namespaces: 
        from: All
    tls:
      certificateRefs:
      - name: demo-app-cert
        namespace: consul
        group: ""
        kind: Secret
      mode: Terminate
